<resources>
    <string name="app_name">Foodxme</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="menu_book">menu</string>
    <string name="favourite_orders">favourite</string>
    <string name="hot_sale">hot sale</string>

    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>

    <string name="no_internet">No Internet</string>
    <string name="error_msg">Something went wrong with Internet connection</string>

    <string name="product_price">%.2f</string>
    <string name="email_or_phone_number">Email or phone number</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in">Log In</string>
    <string name="or">OR</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="welcome_to_bites">Welcome to bites</string>
    <string name="description_is_here">Description is here</string>
    <string name="signup">SignUp</string>
    <string name="continue_as_a_gest">Continue as a gest</string>
    <string name="create_new_account">Create new account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="every_bite_takes_you_home">Every bite takes you home</string>
    <string name="bookings">Bookings</string>
    <string name="delivery_at">Delivery at</string>
    <string name="change">Change</string>
    <string name="within">Within</string>
    <string name="order_now">Order Now</string>
    <string name="order_latter">Order Latter</string>
    <string name="delivery_date">Delivery Date</string>
</resources>