<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_35"
        app:layout_constraintBottom_toTopOf="@+id/textViewTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15"
        android:text="@string/every_bite_takes_you_home"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="@dimen/dimen_0"
        android:id="@+id/textViewLogin"
        android:layout_marginTop="@dimen/dimen_20"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_15"
        android:layout_marginEnd="@dimen/dimen_15"
        android:background="@drawable/login_gb"
        android:visibility="gone"
        android:gravity="center"
        android:padding="@dimen/dimen_15"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTop" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewContinue"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_30"
        android:drawableRight="@drawable/ic_fast_forward"
        android:drawablePadding="@dimen/dimen_10"
        android:padding="@dimen/dimen_5"
        android:text="@string/continue_as_a_gest"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

</androidx.constraintlayout.widget.ConstraintLayout>